changed to tamarackboise.local

--- a/public/web.config
+++ b/public/web.config
@@ -5,7 +5,7 @@
             <rules>
                 <clear />
                 <rule name="HTTP Redirect to HTTPS" stopProcessing="true">
-                    <match url="(.*)" />
+                    <match url="http://helpdesk.tamarackidaho.com(.*)" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{HTTPS}" pattern="^OFF$" />
                     </conditions>
